--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -1,44 +1,71 @@
 #Messaggi Pagina di login
-area.vasta.protocollo.web.msgs.login.page.title=Accedi
-area.vasta.protocollo.web.msgs.login.msg=Accedi per favore
-area.vasta.protocollo.web.msgs.login.username.placeholder=Username
-area.vasta.protocollo.web.msgs.login.password.placeholder=Password
-area.vasta.protocollo.web.msgs.login.rememberme=Ricordami
-area.vasta.protocollo.web.msgs.login.button=Accedi
-area.vasta.protocollo.web.msgs.login.error.msg=Spiacente! Username e/o password errate
-area.vasta.protocollo.web.msgs.login.logout.msg=Ti sei disconnesso con successo
-area.vasta.protocollo.web.msgs.login.access.denied.title=Accesso negato
-area.vasta.protocollo.web.msgs.login.access.denied.msg=Spiacente; non hai le credenziali per poter accedere a questa pagina
-area.vasta.protocollo.web.msgs.login.access.denied.logout=Logout
-area.vasta.protocollo.web.msgs.login.page.title=Accedi
+arca.context.web.msgs.login.page.title=Accedi
+arca.context.web.msgs.login.msg=Accedi per favore
+arca.context.web.msgs.login.username.placeholder=Username
+arca.context.web.msgs.login.password.placeholder=Password
+arca.context.web.msgs.login.rememberme=Ricordami
+arca.context.web.msgs.login.button=Accedi
+arca.context.web.msgs.login.error.msg=Spiacente! Username e/o password errate
+arca.context.web.msgs.login.logout.msg=Ti sei disconnesso con successo
+arca.context.web.msgs.login.access.denied.title=Accesso negato
+arca.context.web.msgs.login.access.denied.msg=Spiacente; non hai le credenziali per poter accedere a questa pagina
+arca.context.web.msgs.login.access.denied.logout=Esci
+arca.context.web.msgs.login.page.title=Accedi
 
 
 #Messaggi Accesso negato
-area.vasta.protocollo.web.msgs.access.denied.page.msg=Spiacente! Non puoi accedere alla risorsa richiesta
-area.vasta.protocollo.web.msgs.access.denied.page.title=Risorsa non disponibile
+arca.context.web.msgs.access.denied.page.msg=Spiacente! Non puoi accedere alla risorsa richiesta
+arca.context.web.msgs.access.denied.page.title=Risorsa non disponibile
 
 #Messaggi errore generico
-area.vasta.protocollo.web.msgs.generic.error.page.msg=\u00c8 avvenuto un errore durante l'elaborazione. Si prega di riprovare pi\u00f9 tardi
-area.vasta.protocollo.web.msgs.generic.error.page.title=Spiacente! \u00c8 avvenuto un errore
+arca.context.web.msgs.generic.error.page.msg=\u00c8 avvenuto un errore durante l'elaborazione. Si prega di riprovare pi\u00f9 tardi
+arca.context.web.msgs.generic.error.page.title=Spiacente! \u00c8 avvenuto un errore
 
 #Messagi pageTemplate.jsp
-area.vasta.protocollo.web.msgs.riversamenti.manuali.page.name=Dati filiale
-area.vasta.protocollo.web.msgs.registri.protocollo.page.name=Filiali
-area.vasta.protocollo.web.msgs.user.profile.logout=Logout
-area.vasta.protocollo.web.msgs.welcome.msg=Benvenuto
-area.vasta.protocollo.web.msgs.session.dialog.title=Sessione utente quasi scaduta
-area.vasta.protocollo.web.msgs.session.dialog.body=La sessione scadr\u00e0 in <span class="jitp-countdown-holder"></span> secondi
-area.vasta.protocollo.web.msgs.session.dialog.extend=Resta connesso
+arca.context.web.msgs.carica.dati.filiale.page.name=Dati filiale
+arca.context.web.msgs.elenco.filiali.page.name=Filiali
+arca.context.web.msgs.user.profile.logout=Esci
+arca.context.web.msgs.welcome.msg=Benvenuto <strong>{0} {1}</strong>
+arca.context.web.msgs.session.dialog.title=Sessione utente quasi scaduta
+arca.context.web.msgs.session.dialog.body=La sessione scadr\u00e0 in <span class="jitp-countdown-holder"></span> secondi
+arca.context.web.msgs.session.dialog.extend=Resta connesso
+arca.context.web.msgs.calendari.scontri.page.name=Visualizza calendari
+arca.context.web.msgs.classifiche.page.name=Visualizza classifiche
 
 #Messaggi homepage.jsp
-area.vasta.protocollo.web.msgs.home.page.title=Dati file
-area.vasta.protocollo.web.msgs.upload.info=Caricamento file dati filiale. Puoi o cliccare su {0} oppure trascinare il file nel riquadro tratteggiato. La dimensione massima del file \u00e8 <strong>{1}</strong>. Sono ammessi solo file <strong>xls, xlsx, ods</strong> 
-area.vasta.protocollo.web.msgs.upload.add=Aggiungi file
-area.vasta.protocollo.web.msgs.upload.start=Avvia upload
-area.vasta.protocollo.web.msgs.upload.delete=Cancella
-area.vasta.protocollo.web.msgs.upload.cancel=Annulla
-area.vasta.protocollo.web.msgs.upload.error.msg=Errore nel caricamento del file
-area.vasta.protocollo.web.msgs.upload.success=Caricamento file avvenuto con successo
-area.vasta.protocollo.web.msgs.upload.drop.zone.info=Trascina qu\u00ec il file
-area.vasta.protocollo.web.msgs.upload.upload.error.extension=Estensione file non valida. Sono ammessi solo file di tipo xls, xlsx, ods
-area.vasta.protocollo.web.msgs.upload.upload.error.dimension=Dimensione file non valida. Sono ammessi file con dimensione massima pari a {0}
+arca.context.web.msgs.home.page.title=Dati file
+arca.context.web.msgs.upload.info=Caricamento file dati filiale. Puoi o cliccare su {0} oppure trascinare il file nel riquadro tratteggiato. La dimensione massima del file \u00e8 <strong>{1}</strong>. Sono ammessi solo file <strong>xls, xlsx, ods</strong>
+ arca.context.web.msgs.upload.info.warn=<strong>Attenzione!</strong> Se viene caricato un file con una data gi\u00e0 inserita, tutti i dati di questa data verranno cancellati e sostituiti con i dati che si caricheranno
+arca.context.web.msgs.upload.add=Aggiungi file
+arca.context.web.msgs.upload.start=Avvia upload
+arca.context.web.msgs.upload.delete=Cancella
+arca.context.web.msgs.upload.cancel=Annulla
+arca.context.web.msgs.upload.error.msg=Errore nel caricamento del file
+arca.context.web.msgs.upload.success=Caricamento file avvenuto con successo
+arca.context.web.msgs.upload.drop.zone.info=Trascina qu\u00ec il file
+arca.context.web.msgs.upload.upload.error.extension=Estensione file non valida. Sono ammessi solo file di tipo <strong>xls, xlsx, ods</strong>
+arca.context.web.msgs.upload.upload.error.dimension=Dimensione file non valida. Sono ammessi file con dimensione massima pari a {0}
+
+#Messaggi elencoFiliali.jsp
+arca.context.web.msgs.rest.wait.msg=<p><img src="{0}" />Recupero informazioni in corso. Attendi un secondo.....</p>
+arca.context.web.msgs.elenco.filiali.info.msg=Seleziona le filiali di cui vuoi vedere gli andamenti e clicca sul pulsante visualizza andamenti
+arca.context.web.msgs.seleziona.filiale.title.msg=Seleziona la filiale di cui vedere l'andamento
+arca.context.web.msgs.seleziona.filiale.msg=Seleziona la filiale
+arca.context.web.msgs.seleziona.filiale.nome=Nome filiale
+arca.context.web.msgs.seleziona.filiale.azioni=Azioni
+arca.context.web.msgs.visualizza.andamenti.filiale.button=Visualizza andamenti
+arca.context.web.msgs.crea.campionato.button=Crea campionato
+arca.context.web.msgs.titolo.sezione.grafico.andamenti=Grafico andamento filiali basato sul totale <strong>RE+AUTO</strong> in \u20ac
+arca.context.web.msgs.cancella.filiale.title=Cancella filiale
+arca.context.web.msgs.visualizza.info.dati.filiale.title=Visualizza informazioni dati filiale
+arca.context.web.msgs.visualizza.info.dati.filiale.table.th.data=Data
+arca.context.web.msgs.visualizza.info.dati.filiale.table.th.re=RE (\u20ac)
+arca.context.web.msgs.visualizza.info.dati.filiale.table.th.auto=AUTO (\u20ac)
+arca.context.web.msgs.visualizza.info.dati.filiale.table.th.totale=Totale (RE+AUTO) (\u20ac)
+arca.context.web.msgs.cancellazione.filiale.panel.title=<strong>Attenzione!</strong> Confermi di voler cancellare i dati della filiale <strong>{{nomeFiliale}}</strong>? <br/>L'operazione \u00e8 irreversibile.
+arca.context.web.msgs.cancellazione.filiale.btn.msg=Cancella filiale
+arca.context.web.msgs.annulla.cancellazione.filiale.btn.msg=Annulla
+arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di inizio e la data di fine del campionato
+arca.context.web.msgs.creazione.campionato.from=Dal
+arca.context.web.msgs.creazione.campionato.to=Al
+arca.context.web.msgs.creazione.campionato.btn.msg=Crea campionato
