Commit creazione campionato

--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -47,7 +47,7 @@ arca.context.web.msgs.upload.upload.error.extension=Estensione file non valida. 
 arca.context.web.msgs.upload.upload.error.dimension=Dimensione file non valida. Sono ammessi file con dimensione massima pari a {0}
 
 #Messaggi elencoFiliali.jsp
-arca.context.web.msgs.rest.wait.msg=<p><img src="{0}" />Recupero informazioni in corso. Attendi un secondo.....</p>
+arca.context.web.msgs.rest.wait.msg=<p><img src="{0}" />Eleborazione in corso. Attendere.....</p>
 arca.context.web.msgs.elenco.filiali.info.msg=Seleziona le filiali di cui vuoi vedere gli andamenti e clicca sul pulsante visualizza andamenti
 arca.context.web.msgs.seleziona.filiale.title.msg=Seleziona la filiale di cui vedere l'andamento
 arca.context.web.msgs.seleziona.filiale.msg=Seleziona la filiale
@@ -69,3 +69,6 @@ arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di 
 arca.context.web.msgs.creazione.campionato.from=Dal
 arca.context.web.msgs.creazione.campionato.to=Al
 arca.context.web.msgs.creazione.campionato.btn.msg=Crea campionato
+arca.context.web.msgs.creazione.campionato.alert.info=Indicare la produzione minima in \u20ac per ottenere 1 punto in caso di sconfitta ed il numero di squadre per campionato. I valori iniziali sono produzione minima {0} \u20ac e numero squadre {1}
+arca.context.web.msgs.creazione.campionato.produzione.minima=Produzione minima
+arca.context.web.msgs.creazione.campionato.numero.squadre=Numero squadre
