Ottimizzazione lettura filiali

--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -69,6 +69,8 @@ arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di 
 arca.context.web.msgs.creazione.campionato.from=Dal
 arca.context.web.msgs.creazione.campionato.to=Al
 arca.context.web.msgs.creazione.campionato.btn.msg=Crea campionato
-arca.context.web.msgs.creazione.campionato.alert.info=Indicare la produzione minima in \u20ac per ottenere 1 punto in caso di sconfitta ed il numero di squadre per campionato. I valori iniziali sono produzione minima {0} \u20ac e numero squadre {1}
+arca.context.web.msgs.creazione.campionato.alert.info=Indicare la produzione minima in \u20ac per ottenere 1 punto in caso di sconfitta ed il numero di squadre per campionato. I valori iniziali sono produzione minima <strong>{0} \u20ac</strong> e numero squadre <strong>{1}</strong>
 arca.context.web.msgs.creazione.campionato.produzione.minima=Produzione minima
 arca.context.web.msgs.creazione.campionato.numero.squadre=Numero squadre
+arca.context.web.msgs.campionato.ko=<strong><i class="fa fa-warning" aria-hidden="true"></i>Attenzione!</strong>. \u00c8 avvenuto un errore nella creazione del campionato. Riprova pi\u00f9 tardi
+arca.context.web.msgs.campionato.ok=<strong><i class="fa fa-check" aria-hidden="true"></i></strong>. Campionato creato con successo
