--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -48,7 +48,7 @@ arca.context.web.msgs.upload.upload.error.dimension=Dimensione file non valida. 
 
 #Messaggi elencoFiliali.jsp
 arca.context.web.msgs.rest.wait.msg=<p><img src="{0}" />Eleborazione in corso. Attendere.....</p>
-arca.context.web.msgs.elenco.filiali.info.msg=Seleziona le filiali di cui vuoi vedere gli andamenti e clicca sul pulsante visualizza andamenti
+arca.context.web.msgs.elenco.filiali.info.msg=Seleziona le filiali di cui vuoi vedere gli andamenti e clicca sul pulsante <strong>{0}</strong>.<br/> Se vuoi creare un campionato clicca il pulsante <strong>{1}</strong>
 arca.context.web.msgs.seleziona.filiale.title.msg=Seleziona la filiale di cui vedere l'andamento
 arca.context.web.msgs.seleziona.filiale.msg=Seleziona la filiale
 arca.context.web.msgs.seleziona.filiale.nome=Nome filiale
@@ -65,7 +65,8 @@ arca.context.web.msgs.visualizza.info.dati.filiale.table.th.totale=Totale (RE+AU
 arca.context.web.msgs.cancellazione.filiale.panel.title=<strong>Attenzione!</strong> Confermi di voler cancellare i dati della filiale <strong>{{nomeFiliale}}</strong>? <br/>L'operazione \u00e8 irreversibile.
 arca.context.web.msgs.cancellazione.filiale.btn.msg=Cancella filiale
 arca.context.web.msgs.annulla.cancellazione.filiale.btn.msg=Annulla
-arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di inizio e la data di fine del campionato
+arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di inizio e la data di fine del campionato; la prossima data possibile per l'inizio del campionato \u00e8 il <strong>{0}</strong>
+arca.context.web.msgs.creazione.esiste.campionato.attivo.alert.title.msg=Impossibile creare un nuovo campionato. Esistono gi\u00e0 campionati attivi. Attendere la loro chiusura
 arca.context.web.msgs.creazione.campionato.from=Dal
 arca.context.web.msgs.creazione.campionato.to=Al
 arca.context.web.msgs.creazione.campionato.btn.msg=Crea campionato
