--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -13,6 +13,13 @@ arca.context.web.msgs.login.access.denied.logout=Esci
 arca.context.web.msgs.login.page.title=Accedi
 
 
+arca.context.web.msgs.elenco.filiali.page.title=Elenco filiali
+arca.context.web.msgs.classifiche.page.title=Classifiche
+
+arca.context.web.msgs.classifiche.info.msg=Elenco classifiche campionati
+arca.context.web.msgs.titolo.sezione.classifica.campionato=Classifica dei campionati
+arca.context.web.msgs.titolo.sezione.no.classifica.campionato=Nessuna classifica disponibile
+arca.context.web.msgs.titolo.sezione.tipo.campionato=Campionato di serie <strong>{0}</strong>
 #Messaggi Accesso negato
 arca.context.web.msgs.access.denied.page.msg=Spiacente! Non puoi accedere alla risorsa richiesta
 arca.context.web.msgs.access.denied.page.title=Risorsa non disponibile
