Primi test algoritmo match

--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -81,4 +81,4 @@ arca.context.web.msgs.creazione.campionato.alert.info=Indicare la produzione min
 arca.context.web.msgs.creazione.campionato.produzione.minima=Produzione minima
 arca.context.web.msgs.creazione.campionato.numero.squadre=Numero squadre
 arca.context.web.msgs.campionato.ko=<strong><i class="fa fa-warning" aria-hidden="true"></i>Attenzione!</strong>. \u00c8 avvenuto un errore nella creazione del campionato. Riprova pi\u00f9 tardi
-arca.context.web.msgs.campionato.ok=<strong><i class="fa fa-check" aria-hidden="true"></i></strong>. Campionato creato con successo
+arca.context.web.msgs.campionato.ok=<strong><i class="fa fa-check" aria-hidden="true"></i></strong> Campionato creato con successo
