Ricerca nella tabella filiali

--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -72,7 +72,7 @@ arca.context.web.msgs.visualizza.info.dati.filiale.table.th.totale=Totale (RE+AU
 arca.context.web.msgs.cancellazione.filiale.panel.title=<strong>Attenzione!</strong> Confermi di voler cancellare i dati della filiale <strong>{{nomeFiliale}}</strong>? <br/>L'operazione \u00e8 irreversibile.
 arca.context.web.msgs.cancellazione.filiale.btn.msg=Cancella filiale
 arca.context.web.msgs.annulla.cancellazione.filiale.btn.msg=Annulla
-arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di inizio e la data di fine del campionato; la prossima data possibile per l'inizio del campionato \u00e8 il <strong>{0}</strong>
+arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di inizio e la data di fine del campionato; la prossima data possibile per inizio del campionato \u00e8 il <strong>{0}</strong>
 arca.context.web.msgs.creazione.esiste.campionato.attivo.alert.title.msg=Impossibile creare un nuovo campionato. Esistono gi\u00e0 campionati attivi. Attendere la loro chiusura
 arca.context.web.msgs.creazione.campionato.from=Dal
 arca.context.web.msgs.creazione.campionato.to=Al
