--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -55,7 +55,8 @@ arca.context.web.msgs.upload.upload.error.dimension=Dimensione file non valida. 
 
 #Messaggi elencoFiliali.jsp
 arca.context.web.msgs.rest.wait.msg=<p><img src="{0}" />Eleborazione in corso. Attendere.....</p>
-arca.context.web.msgs.elenco.filiali.info.msg=Seleziona le filiali di cui vuoi vedere gli andamenti e clicca sul pulsante <strong>{0}</strong>.<br/> Se vuoi creare un campionato clicca il pulsante <strong>{1}</strong>
+arca.context.web.msgs.elenco.filiali.info.msg=Seleziona le filiali di cui vuoi vedere gli andamenti e clicca sul pulsante <strong>{0}</strong>.
+arca.context.web.msgs.creazione.campionato.info.msg=Se vuoi creare un campionato clicca il pulsante <strong>{0}</strong>
 arca.context.web.msgs.seleziona.filiale.title.msg=Seleziona la filiale di cui vedere l'andamento
 arca.context.web.msgs.seleziona.filiale.msg=Seleziona la filiale
 arca.context.web.msgs.seleziona.filiale.nome=Nome filiale
