--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -17,6 +17,7 @@ arca.context.web.msgs.elenco.filiali.page.title=Elenco filiali
 arca.context.web.msgs.classifiche.page.title=Classifiche
 arca.context.web.msgs.calendari.page.title=Calendari incontri
 arca.context.web.msgs.calendari.info.msg=Elenco calendari campionati
+arca.context.web.msgs.calendari.warning.msg=<strong><i class="fa fa-warning"></i> Nota Bene </strong>: il valore \u00e8 relativo all'importo della settimana indicata come data dell'incontro
 arca.context.web.msgs.classifiche.info.msg=Elenco classifiche campionati
 arca.context.web.msgs.titolo.sezione.classifica.campionato=Classifica dei campionati
 arca.context.web.msgs.titolo.sezione.no.classifica.campionato=Nessuna classifica disponibile
