--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -44,8 +44,11 @@ arca.context.web.msgs.classifiche.page.name=Visualizza classifiche
 
 #Messaggi homepage.jsp
 arca.context.web.msgs.home.page.title=Dati file
+arca.context.web.msgs.home.page.date.incontri=Stai caricando dei risultati per un incontro. Indica la data di riferimento dell'incontro
+arca.context.web.msgs.home.page.seleziona.data=Seleziona una data
+arca.context.web.msgs.home.page.date.incontri.required=\u00c8 obbligatorio selezionare una data.
 arca.context.web.msgs.upload.info=Caricamento file dati filiale. Puoi o cliccare su {0} oppure trascinare il file nel riquadro tratteggiato. La dimensione massima del file \u00e8 <strong>{1}</strong>. Sono ammessi solo file <strong>xls, xlsx, ods</strong>
- arca.context.web.msgs.upload.info.warn=<strong>Attenzione!</strong> Se viene caricato un file con una data gi\u00e0 inserita, tutti i dati di questa data verranno cancellati e sostituiti con i dati che si caricheranno
+arca.context.web.msgs.upload.info.warn=<strong>Attenzione!</strong> Se viene caricato un file con una data gi\u00e0 inserita, tutti i dati di questa data verranno cancellati e sostituiti con i dati che si caricheranno
 arca.context.web.msgs.upload.add=Aggiungi file
 arca.context.web.msgs.upload.start=Avvia upload
 arca.context.web.msgs.upload.delete=Cancella
