--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -41,6 +41,8 @@ arca.context.web.msgs.session.dialog.body=La sessione scadr\u00e0 in <span class
 arca.context.web.msgs.session.dialog.extend=Resta connesso
 arca.context.web.msgs.calendari.scontri.page.name=Visualizza calendari
 arca.context.web.msgs.classifiche.page.name=Visualizza classifiche
+arca.context.web.msgs.data.incontro.select=Incontro del {0}
+
 
 #Messaggi homepage.jsp
 arca.context.web.msgs.home.page.title=Dati file
