--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -55,7 +55,7 @@ arca.context.web.msgs.upload.add=Aggiungi file
 arca.context.web.msgs.upload.start=Avvia upload
 arca.context.web.msgs.upload.delete=Cancella
 arca.context.web.msgs.upload.cancel=Annulla
-arca.context.web.msgs.upload.error.msg=Errore nel caricamento del file
+arca.context.web.msgs.upload.error.msg=Errore nel caricamento del file <strong><i>{0}</i></strong>. Ti preghiamo di riprovare pi\u00f9 tardi. Se il problema persiste ti preghiamo di contattare un amministratore.
 arca.context.web.msgs.upload.success=Caricamento file avvenuto con successo
 arca.context.web.msgs.upload.drop.zone.info=Trascina qu\u00ec il file
 arca.context.web.msgs.upload.upload.error.extension=Estensione file non valida. Sono ammessi solo file di tipo <strong>xls, xlsx, ods</strong>
@@ -85,6 +85,8 @@ arca.context.web.msgs.creazione.campionato.alert.title.msg=Seleziona la data di 
 arca.context.web.msgs.creazione.esiste.campionato.attivo.alert.title.msg=Impossibile creare un nuovo campionato. Esistono gi\u00e0 campionati attivi. Attendere la loro chiusura
 arca.context.web.msgs.creazione.campionato.from=Dal
 arca.context.web.msgs.creazione.campionato.to=Al
+arca.context.web.msgs.creazione.campionato.data.filiali.info=Sono stati inseriti dei dati. Indica la data di riferimento da cui creare i campionati
+arca.context.web.msgs.creazione.campionato.data.filiali=Data creazione campionato
 arca.context.web.msgs.creazione.campionato.btn.msg=Crea campionato
 arca.context.web.msgs.creazione.campionato.alert.info=Indicare la produzione minima in \u20ac per ottenere 1 punto in caso di sconfitta ed il numero di squadre per campionato. I valori iniziali sono produzione minima <strong>{0} \u20ac</strong> e numero squadre <strong>{1}</strong>
 arca.context.web.msgs.creazione.campionato.produzione.minima=Produzione minima
