--- a/src/main/webapp/WEB-INF/bundle/messages.properties
+++ b/src/main/webapp/WEB-INF/bundle/messages.properties
@@ -75,6 +75,8 @@ arca.context.web.msgs.titolo.sezione.grafico.andamenti=Grafico andamento filiali
 arca.context.web.msgs.cancella.filiale.title=Cancella filiale
 arca.context.web.msgs.visualizza.info.dati.filiale.title=Visualizza informazioni dati filiale
 arca.context.web.msgs.visualizza.info.dati.filiale.table.th.data=Data
+arca.context.web.msgs.visualizza.info.dati.filiale.table.th.data.toggle=Indica la data incontro selezionata nel caricamento del file
+arca.context.web.msgs.visualizza.info.dati.filiale.table.th.nomeFile=Nome file caricato
 arca.context.web.msgs.visualizza.info.dati.filiale.table.th.re=RE (\u20ac)
 arca.context.web.msgs.visualizza.info.dati.filiale.table.th.auto=AUTO (\u20ac)
 arca.context.web.msgs.visualizza.info.dati.filiale.table.th.totale=Totale (RE+AUTO) (\u20ac)
